--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -31,7 +31,7 @@
             <a href="/#how-it-works">How It Works</a>
           </li>
           <li id="menu-gift" class="menu-item">
-            <a href="/gift">Gift</a>
+            <a href="/join">Gift</a>
           </li>
         </ul>
       </div>
