--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -5,5 +5,8 @@ $header-footer-blue: rgb(185, 223, 222);
 $selected-menu-item: rgb(85, 85, 85);
 $link-green: rgb(119, 151, 138);
 $button-yellow: rgb(223, 218, 73);
+$button-yellow-light: rgb(223, 226, 73);
 $menu-green: rgb(170, 193, 114);
 $error-red: rgb(178, 64, 0);
+$dark-gray: rgb(150, 150, 150);
+$light-gray: rgb(173, 173, 173);
