--- a/app/assets/stylesheets/inputs.scss
+++ b/app/assets/stylesheets/inputs.scss
@@ -1,6 +1,11 @@
 @import "colors";
 
-input[type=text], input[type=email], input[type=password],textarea, select {
+input[type=text],
+input[type=email],
+input[type=date],
+input[type=password],
+textarea,
+select {
   display: block;
   width: 50%;
   -webkit-transition: all 0.15s ease-in-out;
@@ -14,7 +19,12 @@ input[type=text], input[type=email], input[type=password],textarea, select {
   background: transparent;
 }
 
-input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, textarea:focus, select:focus {
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=date]:focus,
+input[type=password]:focus,
+textarea:focus,
+select:focus {
   box-shadow: 0 0 5px $book-green-color;
   padding: 10px 0px 10px 15px;
   margin: 20px 1px 20px 0px;
@@ -28,7 +38,11 @@ select, select:focus {
   padding: 10px 0 10px 15px;
 }
 
-input[type=text], input[type=email], input[type=password], select {
+input[type=text],
+input[type=email],
+input[type=date],
+input[type=password],
+select {
   width: 40%;
 }
 
@@ -40,11 +54,18 @@ input[type=submit] {
   font-size: .9em;
   font-weight: 300;
   padding: 12px 15px;
-  background: $button-yellow;
   border: 0 none;
   cursor: pointer;
   -webkit-border-radius: 3px;
   border-radius: 3px;
+}
+
+input[type=submit].button-yellow {
+  background: $button-yellow;
+}
+
+input[type=submit].button-yellow {
+  background: $button-yellow;
 }
 
 input[type=submit]:disabled {
@@ -56,6 +77,6 @@ input[type=submit]:hover, a.submit {
   -moz-transition:all .2s ease;
   -o-transition:all .2s ease;
   -webkit-transition:all .2s ease;
-  background: $book-green-color;
+  background: $book-green-color-light;
   color: white;
 }
