Adds login functionality, refactors css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,9 +17,14 @@
  *= require footer
  *= require inputs
  *= require button
+
  *= require homepage
  *= require our_box
- *= require join
+
+ *= require sessions/new
+ *= require subscriptions/new
+ *= require users/show
+
  *= require responsive
  *= require_tree .
  *= require_self
