--- a/app/views/contact_comments/new.html.erb
+++ b/app/views/contact_comments/new.html.erb
@@ -5,13 +5,7 @@
     <h1>Contact Us</h1>
   </div>
 
-  <div class="flash">
-    <% if flash[:notice]%>
-      <div class="flash-message success"><%= flash[:notice] %></div>
-    <% elsif flash[:error] %>
-      <div class="flash-message error"><%= flash[:error] %></div>
-    <% end %>
-  </div>
+  <%= render "shared/errors" %>
 
   <div class="Grid">
     <section id="contact-info-wrapper" class="u-size1of2">
@@ -30,12 +24,12 @@
 
     <section id="email-form-wrapper" class="u-size1of2">
       <div class="email-form">
-        <h3>Contact Us</h3>
+        <h3>Comments are appreciated!</h3>
         <%= form_for @contact_comment, url: {action: "create"}, html: {class: "nifty_form"} do |f| %>
           <%= f.text_field :name, { placeholder: "Name", required: true } %>
           <%= f.text_field :email, { placeholder: "Email", type: "email", required: true, pattern: "[^@]+@[^@]+\.[a-zA-Z]{2,6}" } %>
           <%= f.text_area :message, { placeholder: "Comments", required: true } %>
-          <%= f.submit "SUBMIT", class: "contact-submit" %>
+          <%= f.submit "Submit", class: "contact-submit button" %>
         <% end %>
       </div>
     </section>
