--- a/app/assets/stylesheets/inputs.scss
+++ b/app/assets/stylesheets/inputs.scss
@@ -5,6 +5,22 @@ input[type=email],
 input[type=date],
 input[type=password],
 textarea,
+select,
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=date]:focus,
+input[type=password]:focus,
+textarea:focus,
+select:focus {
+  padding: 28px 0px 15px 15px;
+}
+
+
+input[type=text],
+input[type=email],
+input[type=date],
+input[type=password],
+textarea,
 select {
   display: block;
   width: 50%;
@@ -13,10 +29,17 @@ select {
   -ms-transition: all 0.15s ease-in-out;
   -o-transition: all 0.15s ease-in-out;
   outline: none;
-  padding: 10px 0px 10px 15px;
-  margin: 20px 1px 20px 0px;
-  border: 1px solid #DDDDDD;
+  // margin: 20px 1px 20px 0px;
+  border: 0px solid #DDDDDD;
+  border-bottom: 1px solid #DDDDDD;
   background: transparent;
+}
+
+input.border-right,
+input.border-right:focus,
+select.border-right,
+select.border-right:focus {
+  border-right: 1px solid #DDDDDD;
 }
 
 input[type=text]:focus,
@@ -26,8 +49,7 @@ input[type=password]:focus,
 textarea:focus,
 select:focus {
   box-shadow: 0 0 5px $book-green-color;
-  padding: 10px 0px 10px 15px;
-  margin: 20px 1px 20px 0px;
+  // margin: 20px 1px 20px 0px;
   border: 1px solid $book-green-color;
 }
 
@@ -35,7 +57,6 @@ select, select:focus {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  padding: 10px 0 10px 15px;
 }
 
 input[type=text],
@@ -79,4 +100,19 @@ input[type=submit]:hover, a.submit {
   -webkit-transition:all .2s ease;
   background: $book-green-color-light;
   color: white;
+}
+
+// placeholder text color
+input:-ms-input-placeholder { color: $light-gray !important; }
+input:-moz-placeholder { color: $light-gray !important; }  /* Firefox 18- */
+input::-moz-placeholder { color: $light-gray !important; }  /* Firefox 19+ */
+input::-webkit-input-placeholder { color: $light-gray !important; }
+
+input[type=radio] {
+  cursor: pointer;
+}
+
+input[type=submit], .button {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
