--- a/app/assets/stylesheets/flash_notice.scss
+++ b/app/assets/stylesheets/flash_notice.scss
@@ -17,7 +17,7 @@
 
 .success {
   color: white;
-  background-color: $menu-green;
+  background-color: $success-green;
   border: 1px solid grey;
 }
 
