--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -36,7 +36,7 @@
 
     .login-container {
       padding: 12px 5px;
-      background-color: $book-green-color;
+      background-color: $base-green;
       border-radius: 0 0 10px 10px;
 
       a {
