--- a/app/assets/stylesheets/homepage.scss.erb
+++ b/app/assets/stylesheets/homepage.scss.erb
@@ -53,7 +53,7 @@
 
   h2 {
     text-align: center;
-    color: $book-green-color;
+    color: $base-green;
     font-size: 36px;
     font-weight: 400;
     display: inline-block;
