--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -7,7 +7,7 @@
 
   <div class="subscription-container">
 
-    <!-- <div class="Grid subscription-nav">
+    <div class="Grid subscription-nav">
       <span class="Grid-cell u-size1of4">
         <div class="nav-item active">
           Subscription Type
@@ -28,7 +28,7 @@
           Pay & Finish
         </div>
       </span>
-    </div> -->
+    </div>
 
     <%= form_tag('join', class: "subscription-form") do %>
       <section class="form-section">
