--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,7 +37,7 @@
           </br></br>
           Choose the length of the subscription and provide the shipping address. Each box costs $29.99/month.
         </p>
-        <a href="/gift" class="button">Gift it</a>
+        <a href="/join" class="button">Gift it</a>
         <a href="/our_box" class="learn-more">Learn more</a>
       </div>
     </div>
@@ -68,7 +68,7 @@
 
     <div class="sign-up-links">
       <a href="/join" class="button-yellow">Join now</a>
-      <a href="/gift" class="button">Gift it</a>
+      <a href="/join" class="button">Gift it</a>
     </div>
   </section>
 
