--- a/app/assets/stylesheets/inputs.scss
+++ b/app/assets/stylesheets/inputs.scss
@@ -1,4 +1,5 @@
 @import "colors";
+@import "mixins";
 
 input[type=text],
 input[type=email],
@@ -22,12 +23,9 @@ input[type=date],
 input[type=password],
 textarea,
 select {
+  @include transition;
   display: block;
   width: 50%;
-  -webkit-transition: all 0.15s ease-in-out;
-  -moz-transition: all 0.15s ease-in-out;
-  -ms-transition: all 0.15s ease-in-out;
-  -o-transition: all 0.15s ease-in-out;
   outline: none;
   // margin: 20px 1px 20px 0px;
   border: 0px solid #DDDDDD;
@@ -48,9 +46,9 @@ input[type=date]:focus,
 input[type=password]:focus,
 textarea:focus,
 select:focus {
-  box-shadow: 0 0 5px $book-green-color;
+  box-shadow: 0 0 5px $base-green;
   // margin: 20px 1px 20px 0px;
-  border: 1px solid $book-green-color;
+  border: 1px solid $base-green;
 }
 
 select, select:focus {
@@ -95,10 +93,8 @@ input[type=submit]:disabled {
 }
 
 input[type=submit]:hover, a.submit {
-  -moz-transition:all .2s ease;
-  -o-transition:all .2s ease;
-  -webkit-transition:all .2s ease;
-  background: $book-green-color-light;
+  @include transition;
+  background: $base-green-light;
   color: white;
 }
 
