Adds user show page subscriptions sub-menu

--- a/app/views/shared/_subscription.html.erb
+++ b/app/views/shared/_subscription.html.erb
@@ -33,6 +33,7 @@
             <div>
               <%= render partial: "shared/address", locals: { entity: subscription } %>
             </div>
+            <span>Edit shipping address</span>
           </div>
         </div>
         <div class="small-info">Paid with:</div>
