--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -25,8 +25,7 @@
       color: black;
       font-weight: bold;
       padding-bottom: 3px;
-      border-bottom: 1px solid $active-nav-red;
-      // border-bottom: 2px solid $base-green;
+      border-bottom: 1px solid $base-green;
     }
 
     .user-nav {
@@ -101,7 +100,7 @@
 
     .subscription-button {
       float: right;
-      font-size: 0.7em;
+      font-size: 0.9em;
       width: 100%;
       margin-bottom: 15px;
     }
