WIP subscription react view

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,7 +32,8 @@
         <div class="subscriptions">
           <div class="active-subscriptions">
             <% @active_subscriptions.each do |subscription| %>
-              <%= render partial: "shared/subscription", locals: { subscription: subscription } %>
+              <%= react_component('Subscription', subscription: @active_subscriptions.first) %>
+              <%# render partial: "shared/subscription", locals: { subscription: subscription } %>
             <% end %>
           </div>
           <div class="inactive-subscriptions hidden">
