--- a/app/assets/stylesheets/subscriptions/new.scss
+++ b/app/assets/stylesheets/subscriptions/new.scss
@@ -57,7 +57,8 @@
   }
 
   .subscription-options {
-    margin-top: 50px;
+    padding: 10px;
+    margin-top: 40px;
     text-align: center;
 
     .subscription-info {
