--- a/app/views/shared/_subscription.html.erb
+++ b/app/views/shared/_subscription.html.erb
@@ -48,6 +48,7 @@
         <div class="subscription-button button">Extend Subscription</div>
         <div class="subscription-button button">Add Child</div>
         <div class="subscription-button button button-yellow">Suspend Subscription</div>
+        <div class="subscription-button button button-yellow">Cancel Subscription</div>
       </div>
     </div>
   </div>
