--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -34,7 +34,7 @@
       <section class="form-section">
         <h3>CHOOSE SUBSCRIPTION:</h3>
         <div class="Grid subscription-options">
-          <div class="Grid-cell u-size1of3">
+          <div class="Grid-cell u-size1of3 subscription-option">
             <div class="subscription-info">
               <span>
                 <span class="month-number">1 Month</span> Subscription
@@ -45,7 +45,7 @@
             </div>
             <%= radio_button_tag("subscription_type", 1) %>
           </div>
-          <div class="Grid-cell u-size1of3">
+          <div class="Grid-cell u-size1of3 subscription-option">
             <div class="subscription-info">
               <span>
                 <span class="month-number">3 Month</span> Subscription
@@ -56,7 +56,7 @@
             </div>
             <%= radio_button_tag("subscription_type", 3) %>
           </div>
-          <div class="Grid-cell u-size1of3">
+          <div class="Grid-cell u-size1of3 subscription-option">
             <div class="subscription-info">
               <span>
                 <span class="month-number">6 Month</span> Subscription
